--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin Student 1 -->
+              <!-- Begin Jon Boss -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -117,9 +117,9 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 1 -->
+              <!-- End Jon Boss -->
 
-              <!-- Begin Student 2 -->
+              <!-- Begin John Odom -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 2 -->
+              <!-- End John Odom -->
 
               <!-- Duplicate li code block above to place more students here -->
 
